# tree_menu

./: .env.template  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yaml  pyproject.toml
scr/tree_menu/core/: admin.py
scr/tree_menu/core/business_logic/services/: __init__.py  menu.py
scr/tree_menu/core/business_logic/templatetags/: __init__.py  menu_tags.py
scr/tree_menu/core/migrations/: 0001_initial.py
scr/tree_menu/core/models/: __init__.py  menu.py
scr/tree_menu/core/presentation/: urls.py
scr/tree_menu/core/presentation/templates/: menu.html  menu_template.html
scr/tree_menu/core/presentation/views/: __init__.py  menu.py
scr/tree_menu/tree_menu/: settings.py  urls.py
