[tool.poetry]
name = "tree-menu"
version = "0.1.0"
description = ""
authors = ["HiRurgLipay <sl38lipay@gmail.com>"]
readme = "README.md"
packages = [{include = "tree_menu"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
